--- a/Latex/bachelor.tex
+++ b/Latex/bachelor.tex
@@ -27,29 +27,29 @@
 \end{titlepage}
 
 \input{chapter/abstract.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \tableofcontents
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \input{chapter/einleitung.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \input{chapter/theorie.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \input{chapter/methodik.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \input{chapter/implementierung.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \input{chapter/analyse.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \input{chapter/fazit.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \appendix % hier beginnt der Anhang
 \input{chapter/anhang_auswertung.tex}
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \listoffigures
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 %\listoftables
 %\cleardoubleoddemptypage
 %\listof{algorithm}{Algorithmenverzeichnis}
@@ -57,7 +57,7 @@
 %\listoflistings
 %\cleardoubleoddemptypage
 \printbibliography
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \input{chapter/eidesstattliche.tex}
 
 \end{document}
