--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -2,20 +2,20 @@
 author = {Lawrence, J D},
 pages = {62--63},
 publisher = {Dover Publications},
-title = {{A Catalog of Special Plane Curves}},
+title = {A Catalog of Special Plane Curves},
 year = {1972},
 isbn = {9780486602882},
 }
 
 @article{Eberly2008,
 author = {Eberly, David},
-title = {{The Area of Intersecting Ellipses}},
+title = {The Area of Intersecting Ellipses},
 year = {2008},
 }
 
 @article{Eberly2013,
 author = {Eberly, David},
-title = {{Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid}},
+title = {Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid},
 pages = {1--13},
 year = {2013},
 }
@@ -30,12 +30,12 @@ issue_date = {June 1981},
 volume = {24},
 number = {6},
 year = {1981},
-issn = {0001-0782},
+%issn = {0001-0782},
 pages = {381--395},
 numpages = {15},
-url = {http://doi.acm.org/10.1145/358669.358692},
+%url = {http://doi.acm.org/10.1145/358669.358692},
 doi = {10.1145/358669.358692},
-acmid = {358692},
+%acmid = {358692},
 publisher = {ACM},
 address = {New York, NY, USA},
 keywords = {automated cartography, camera calibration, image matching, location determination, model fitting, scene analysis},
@@ -49,8 +49,8 @@ year = {1987},
 isbn = {0-86720-294-7},
 pages = {323--344},
 numpages = {22},
-url = {http://dl.acm.org/citation.cfm?id=136913.136938},
-acmid = {136938},
+%url = {http://dl.acm.org/citation.cfm?id=136913.136938},
+%acmid = {136938},
 publisher = {Jones and Bartlett Publishers, Inc.},
 address = {USA},
 }
@@ -64,8 +64,8 @@ series = {CVPR '97},
 year = {1997},
 isbn = {0-8186-7822-4},
 pages = {1106--},
-url = {http://dl.acm.org/citation.cfm?id=794189.794489},
-acmid = {794489},
+%url = {http://dl.acm.org/citation.cfm?id=794189.794489},
+%acmid = {794489},
 publisher = {IEEE Computer Society},
 address = {Washington, DC, USA},
 keywords = {camera calibration, accurate 3-D measurements, lens distortion, circular features},
@@ -80,12 +80,12 @@ issue_date = {June 1986},
 volume = {8},
 number = {6},
 year = {1986},
-issn = {0162-8828},
+%issn = {0162-8828},
 pages = {679--698},
 numpages = {20},
-url = {http://dx.doi.org/10.1109/TPAMI.1986.4767851},
+%url = {http://dx.doi.org/10.1109/TPAMI.1986.4767851},
 doi = {10.1109/TPAMI.1986.4767851},
-acmid = {11275},
+%acmid = {11275},
 publisher = {IEEE Computer Society},
 address = {Washington, DC, USA},
 keywords = {Edge detection, feature extraction, image processing, machine vision, multiscale image analysis},
@@ -100,12 +100,12 @@ issue_date = {Dec. 1993},
 volume = {11},
 number = {3},
 year = {1993},
-issn = {0920-5691},
+%issn = {0920-5691},
 pages = {283--318},
 numpages = {36},
-url = {http://dx.doi.org/10.1007/BF01469346},
+%url = {http://dx.doi.org/10.1007/BF01469346},
 doi = {10.1007/BF01469346},
-acmid = {171892},
+%acmid = {171892},
 publisher = {Kluwer Academic Publishers},
 address = {Hingham, MA, USA},
 }
@@ -115,7 +115,7 @@ address = {Hingham, MA, USA},
 author = {Stoer, Burlisch},
 pages = {249--253},
 publisher = {Springer},
-title = {{Numerische Mathematik 1}},
+title = {Numerische Mathematik 1},
 year = {2007}
 }
 
@@ -124,7 +124,7 @@ year = {2007}
 author = {Stoer, Burlisch},
 pages = {21--23},
 publisher = {Springer},
-title = {{Numerische Mathematik 2}},
+title = {Numerische Mathematik 2},
 year = {2011}
 }
 
@@ -137,12 +137,12 @@ issue_date = {April 1976},
 volume = {25},
 number = {4},
 year = {1976},
-issn = {0018-9340},
+%issn = {0018-9340},
 pages = {449--456},
 numpages = {8},
-url = {http://dx.doi.org/10.1109/TC.1976.1674627},
+%url = {http://dx.doi.org/10.1109/TC.1976.1674627},
 doi = {10.1109/TC.1976.1674627},
-acmid = {1310234},
+%acmid = {1310234},
 publisher = {IEEE Computer Society},
 address = {Washington, DC, USA},
 keywords = {Edge finding, machine vision, scene analysis.},
@@ -167,12 +167,12 @@ issue_date = {November 2000},
 volume = {22},
 number = {11},
 year = {2000},
-issn = {0162-8828},
+%issn = {0162-8828},
 pages = {1330--1334},
 numpages = {5},
-url = {http://dx.doi.org/10.1109/34.888718},
+%url = {http://dx.doi.org/10.1109/34.888718},
 doi = {10.1109/34.888718},
-acmid = {357025},
+%acmid = {357025},
 publisher = {IEEE Computer Society},
 address = {Washington, DC, USA},
 keywords = {Camera calibration, calibration from planes, 2D pattern, flexible plane-based calibration, absolute conic, projective mapping, lens distortion, closed-form solution, maximum likelihood estimation, flexible setup.},
@@ -182,9 +182,9 @@ keywords = {Camera calibration, calibration from planes, 2D pattern, flexible pl
 author = {Bosch, Siegfried},
 doi = {10.1007/3-540-29885-1},
 isbn = {3-540-29884-3},
-issn = {0717-6163},
+%issn = {0717-6163},
 pmid = {15003161},
-title = {{Lineare Algebra}},
+title = {Lineare Algebra},
 year = {2006}
 }
 
@@ -197,12 +197,12 @@ issue_date = {Aug. 1992},
 volume = {8},
 number = {2},
 year = {1992},
-issn = {0920-5691},
+%issn = {0920-5691},
 pages = {99--111},
 numpages = {13},
-url = {http://dx.doi.org/10.1007/BF00127169},
+%url = {http://dx.doi.org/10.1007/BF00127169},
 doi = {10.1007/BF00127169},
-acmid = {144380},
+%acmid = {144380},
 publisher = {Kluwer Academic Publishers},
 address = {Hingham, MA, USA},
 }
@@ -215,9 +215,9 @@ journal = {Acoustics, Speech and Signal Processing, IEEE Transactions on},
 volume = {29},
 number = {6},
 year = {1981},
-issn = {0096-3518},
+%issn = {0096-3518},
 pages = {1153--1160},
-url = {http://dx.doi.org/10.1109/TASSP.1981.1163711},
+%url = {http://dx.doi.org/10.1109/TASSP.1981.1163711},
 doi = {10.1109/TASSP.1981.1163711},
 }
 
@@ -242,9 +242,9 @@ isbn = {0-89791-724-3},
 location = {Vancouver, British Columbia, Canada},
 pages = {61--70},
 numpages = {10},
-url = {http://doi.acm.org/10.1145/220279.220286},
+%url = {http://doi.acm.org/10.1145/220279.220286},
 doi = {10.1145/220279.220286},
-acmid = {220286},
+%acmid = {220286},
 publisher = {ACM},
 address = {New York, NY, USA},
 }
@@ -261,7 +261,7 @@ year={2014},
 volume={9},
 number={1},
 pages={205--216},
-issn={1861-8219},
+%issn={1861-8219},
 doi={10.1007/s11554-012-0303-4},
-url={http://dx.doi.org/10.1007/s11554-012-0303-4}
+%url={http://dx.doi.org/10.1007/s11554-012-0303-4}
 }
