ein paar Kleinigkeiten

--- a/Latex/bachelor.tex
+++ b/Latex/bachelor.tex
@@ -21,7 +21,7 @@
 
 \listoftodos
 \begin{titlepage}
-	\input{chapter/titelseite.tex}	
+	\input{chapter/titelseite.tex}
 \end{titlepage}
 
 \input{chapter/abstract.tex}
@@ -44,7 +44,7 @@
 \input{chapter/fazit.tex}
 %\cleardoubleoddemptypage
 \appendix % hier beginnt der Anhang
-\input{chapter/anhang_auswertung.tex}
+\input{chapter/anhang_cd.tex}
 %\cleardoubleoddemptypage
 \listoffigures
 %\cleardoubleoddemptypage
