--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -9,18 +9,18 @@ isbn = {9780486602882},
 
 @article{Eberly2008,
 author = {Eberly, David},
+journal = {Geometric Tools, LLC},
 title = {The Area of Intersecting Ellipses},
 year = {2008},
 }
 
 @article{Eberly2013,
 author = {Eberly, David},
+journal = {Geometric Tools, LLC},
 title = {Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid},
 pages = {1--13},
 year = {2013},
 }
-
-
 
 @article{Fischler1981,
 author = {Fischler, Martin A. and Bolles, Robert C.},
