--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -29,7 +29,7 @@
 \usepackage[babel=true, tracking=true,final]{microtype}
 \usepackage{easybmat}
 \usepackage{rotating}
-\usepackage{parskip}
+\usepackage[parfill]{parskip}
 
 %Tabellen
 \usepackage{tabularx}
@@ -96,6 +96,7 @@
 %-- Zeilenabstand einstellen
 \usepackage{setspace}
 % Nun kann man, wenn gewünscht den Zeilenabstand zum Beispiel auf 1,5 setzen mit \onehalfspacing
+\onehalfspacing
 
 \newcommand{\command}[1]{\texttt{\textbackslash{}#1}}
 
