--- a/Latex/bachelor.tex
+++ b/Latex/bachelor.tex
@@ -28,6 +28,7 @@
 %\cleardoubleoddemptypage
 \tableofcontents
 %\cleardoubleoddemptypage
+\clearpage
 \pagenumbering{arabic}
 \setcounter{page}{1}
 %\cleardoubleoddemptypage
