--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -1,6 +1,6 @@
 %!TEX root = bachelor.tex
 % -- Author: Jannes Bantje, j.bantje@wwu.de
-\documentclass[german,a4paper,draft,index=totoc,toc=listof,fontsize=10,DIV=13,headinclude,twoside,BCOR=12mm,cleardoublepage=empty]{scrreprt}
+\documentclass[german,a4paper,index=totoc,toc=listof,fontsize=10,DIV=13,headinclude,twoside,BCOR=12mm,cleardoublepage=empty]{scrreprt}
 
 
 %-- Basics für graphische Sachen
