--- a/Latex/bachelor.tex
+++ b/Latex/bachelor.tex
@@ -25,30 +25,30 @@
 \end{titlepage}
 
 \input{chapter/abstract.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \tableofcontents
-%\cleardoubleoddemptypage
-\clearpage
+\cleardoubleoddemptypage
+%\clearpage
 \pagenumbering{arabic}
 \setcounter{page}{1}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \input{chapter/einleitung.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \input{chapter/theorie.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \input{chapter/methodik.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \input{chapter/implementierung.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \input{chapter/analyse.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \input{chapter/fazit.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \appendix % hier beginnt der Anhang
 \input{chapter/anhang_cd.tex}
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \listoffigures
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 %\listoftables
 %\cleardoubleoddemptypage
 %\listof{algorithm}{Algorithmenverzeichnis}
@@ -56,7 +56,7 @@
 %\listoflistings
 %\cleardoubleoddemptypage
 \printbibliography
-%\cleardoubleoddemptypage
+\cleardoubleoddemptypage
 \input{chapter/eidesstattliche.tex}
 
 \end{document}
