funktionsweise von linien ellipsen schnittpunkt, und ein paar fehler bei winkelbezeichnungen von ellipsen behoben

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -7,6 +7,17 @@ year = {1972},
 isbn = {9780486602882},
 }
 
+@book{James1992,
+author = {James, R C},
+pages = {74--75},
+publisher = {Springer},
+title = {Mathematics Dictionary},
+year = {1992},
+isbn = {9780412990410},
+edition = {5},
+numpages = {560},
+}
+
 @article{Eberly2008,
 author = {Eberly, David},
 journal = {Geometric Tools, LLC},
