--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -4,7 +4,7 @@ pages = {62--63},
 publisher = {Dover Publications},
 title = {A Catalog of Special Plane Curves},
 year = {1972},
-isbn = {9780486602882},
+%isbn = {9780486602882},
 }
 
 @book{James1992,
@@ -13,7 +13,7 @@ pages = {74--75},
 publisher = {Springer},
 title = {Mathematics Dictionary},
 year = {1992},
-isbn = {9780412990410},
+%isbn = {9780412990410},
 edition = {5},
 numpages = {560},
 }
@@ -44,8 +44,8 @@ year = {1981},
 %issn = {0001-0782},
 pages = {381--395},
 numpages = {15},
-%url = {http://doi.acm.org/10.1145/358669.358692},
-doi = {10.1145/358669.358692},
+%url = {http://%doi.acm.org/10.1145/358669.358692},
+%doi = {10.1145/358669.358692},
 %acmid = {358692},
 publisher = {ACM},
 address = {New York, NY, USA},
@@ -57,7 +57,7 @@ author = {Tsai, Roger Y.},
 chapter = {A Versatile Camera Calibration Technique for High-accuracy 3D Machine Vision Metrology Using Off-the-shelf TV Cameras and Lenses},
 title = {Radiometry},
 year = {1987},
-isbn = {0-86720-294-7},
+%isbn = {0-86720-294-7},
 pages = {323--344},
 numpages = {22},
 %url = {http://dl.acm.org/citation.cfm?id=136913.136938},
@@ -73,7 +73,7 @@ title = {A Four-step Camera Calibration Procedure with Implicit Image Correction
 booktitle = {Proceedings of the 1997 Conference on Computer Vision and Pattern Recognition (CVPR '97)},
 series = {CVPR '97},
 year = {1997},
-isbn = {0-8186-7822-4},
+%isbn = {0-8186-7822-4},
 pages = {1106--},
 %url = {http://dl.acm.org/citation.cfm?id=794189.794489},
 %acmid = {794489},
@@ -94,8 +94,8 @@ year = {1986},
 %issn = {0162-8828},
 pages = {679--698},
 numpages = {20},
-%url = {http://dx.doi.org/10.1109/TPAMI.1986.4767851},
-doi = {10.1109/TPAMI.1986.4767851},
+%url = {http://dx.%doi.org/10.1109/TPAMI.1986.4767851},
+%doi = {10.1109/TPAMI.1986.4767851},
 %acmid = {11275},
 publisher = {IEEE Computer Society},
 address = {Washington, DC, USA},
@@ -114,8 +114,8 @@ year = {1993},
 %issn = {0920-5691},
 pages = {283--318},
 numpages = {36},
-%url = {http://dx.doi.org/10.1007/BF01469346},
-doi = {10.1007/BF01469346},
+%url = {http://dx.%doi.org/10.1007/BF01469346},
+%doi = {10.1007/BF01469346},
 %acmid = {171892},
 publisher = {Kluwer Academic Publishers},
 address = {Hingham, MA, USA},
@@ -151,8 +151,8 @@ year = {1976},
 %issn = {0018-9340},
 pages = {449--456},
 numpages = {8},
-%url = {http://dx.doi.org/10.1109/TC.1976.1674627},
-doi = {10.1109/TC.1976.1674627},
+%url = {http://dx.%doi.org/10.1109/TC.1976.1674627},
+%doi = {10.1109/TC.1976.1674627},
 %acmid = {1310234},
 publisher = {IEEE Computer Society},
 address = {Washington, DC, USA},
@@ -164,7 +164,7 @@ keywords = {Edge finding, machine vision, scene analysis.},
 author = {Hartley, Richard and Zisserman, Andrew},
 title = {Multiple View Geometry in Computer Vision},
 year = {2003},
-isbn = {0521540518},
+%isbn = {0521540518},
 edition = {2},
 publisher = {Cambridge University Press},
 address = {New York, NY, USA},
@@ -181,8 +181,8 @@ year = {2000},
 %issn = {0162-8828},
 pages = {1330--1334},
 numpages = {5},
-%url = {http://dx.doi.org/10.1109/34.888718},
-doi = {10.1109/34.888718},
+%url = {http://dx.%doi.org/10.1109/34.888718},
+%doi = {10.1109/34.888718},
 %acmid = {357025},
 publisher = {IEEE Computer Society},
 address = {Washington, DC, USA},
@@ -191,8 +191,8 @@ keywords = {Camera calibration, calibration from planes, 2D pattern, flexible pl
 
 @book{Bosch2006,
 author = {Bosch, Siegfried},
-doi = {10.1007/3-540-29885-1},
-isbn = {3-540-29884-3},
+%doi = {10.1007/3-540-29885-1},
+%isbn = {3-540-29884-3},
 %issn = {0717-6163},
 pmid = {15003161},
 title = {Lineare Algebra},
@@ -211,8 +211,8 @@ year = {1992},
 %issn = {0920-5691},
 pages = {99--111},
 numpages = {13},
-%url = {http://dx.doi.org/10.1007/BF00127169},
-doi = {10.1007/BF00127169},
+%url = {http://dx.%doi.org/10.1007/BF00127169},
+%doi = {10.1007/BF00127169},
 %acmid = {144380},
 publisher = {Kluwer Academic Publishers},
 address = {Hingham, MA, USA},
@@ -228,8 +228,8 @@ number = {6},
 year = {1981},
 %issn = {0096-3518},
 pages = {1153--1160},
-%url = {http://dx.doi.org/10.1109/TASSP.1981.1163711},
-doi = {10.1109/TASSP.1981.1163711},
+%url = {http://dx.%doi.org/10.1109/TASSP.1981.1163711},
+%doi = {10.1109/TASSP.1981.1163711},
 }
 
 
@@ -249,12 +249,12 @@ title = {A Comparison of Sequential Delaunay Triangulation Algorithms},
 booktitle = {Proceedings of the Eleventh Annual Symposium on Computational Geometry},
 series = {SCG '95},
 year = {1995},
-isbn = {0-89791-724-3},
+%isbn = {0-89791-724-3},
 location = {Vancouver, British Columbia, Canada},
 pages = {61--70},
 numpages = {10},
-%url = {http://doi.acm.org/10.1145/220279.220286},
-doi = {10.1145/220279.220286},
+%url = {http://%doi.acm.org/10.1145/220279.220286},
+%doi = {10.1145/220279.220286},
 %acmid = {220286},
 publisher = {ACM},
 address = {New York, NY, USA},
@@ -273,6 +273,6 @@ volume={9},
 number={1},
 pages={205--216},
 %issn={1861-8219},
-doi={10.1007/s11554-012-0303-4},
-%url={http://dx.doi.org/10.1007/s11554-012-0303-4}
+%doi={10.1007/s11554-012-0303-4},
+%url={http://dx.%doi.org/10.1007/s11554-012-0303-4}
 }
